# SuperTerminal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
.github/agents/: rust-gpt-4.1-beast-mode.agent.md
.github/prompts/: cli.prompt.md
src/: main.rs
src/ai/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
