[package]
name = "superterminal"
version = "0.1.0"
edition = "2021"
authors = ["SuperTerminal Contributors"]
description = "AI-powered CLI that converts natural language to shell commands"
license = "MIT"
repository = "https://github.com/yourusername/superterminal"
keywords = ["cli", "ai", "shell", "terminal", "openai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
async-openai = { version = "0.32", features = ["chat-completion"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
colored = "2.0"
dialoguer = "0.11"
dirs = "5.0"
arboard = "3.6"

[dev-dependencies]
tokio-test = "0.4"
